2A/05_Projet_GL/src/test/deca/context/valid/complet/35_assign_param_float.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

    void init(float f ) {
        f = 1.0 ;
    }
}