2A/05_Projet_GL/src/test/deca/context/invalid/complet/29_return_avec_void.deca
// Description :
//    return avce void 
// Resultats :
//    ligne 14 : le type attendu doit étre différent de void
// Historique :
//  cree le 16/01/2024

class A {
    int x ;
    void getX() {
        return x ; 
    }
}